dist_man1_MANS=

if BUILD_AZLORAD
  dist_man1_MANS+=azlorad.1
endif

if ENABLE_QT
  dist_man1_MANS+=azlora-qt.1
endif

if BUILD_AZLORA_CLI
  dist_man1_MANS+=azlora-cli.1
endif

if BUILD_AZLORA_TX
  dist_man1_MANS+=azlora-tx.1
endif

if BUILD_AZLORA_UTIL
  dist_man1_MANS+=azlora-util.1
endif

if ENABLE_WALLET
if BUILD_AZLORA_WALLET
  dist_man1_MANS+=azlora-wallet.1
endif
endif
